--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body {
  text-align: center;
 }
+
+#tickerSymbol {
+    text-transform: uppercase;
+    font-size: 5em;
+}
+
+/* #stockPrice {
+    text-align: left;
+} */
+
+#stockTime {
+    font-size: 0.75em;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+    text-align:center;
+    /*background-color: #0d0d0d;*/
+}
